# welwick

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: release.yaml
src/welwick/: __init__.py  welwick.py
tests/: test_args.py
